# StarFighter

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  GameObject.cpp  GameObject.h  Makefile  README.md  main.cpp  mainloop.cpp
headers/: Application.h  GameObject.h  logic.h  script star.h  wrap_creation.h
src/: Application.cpp  GameObject.cpp  Makefile  app  main.cpp
